--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<ngx-spinner type="ball-clip-rotatee"></ngx-spinner>
+<ngx-spinner type="ball-clip-rotate"></ngx-spinner>
 <div class="container is-max-desktop mt-5">
   <router-outlet></router-outlet>
   <router-outlet name="modal"></router-outlet>
