--- a/src/app/modules/payment/components/table-payment/table-payment.component.html
+++ b/src/app/modules/payment/components/table-payment/table-payment.component.html
@@ -22,7 +22,7 @@
         class="button is-primary is-fullwidth"
         type="button"
       >
-        Add Payment
+        Create Payment
       </button>
     </div>
   </div>
