--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -156,7 +156,7 @@
 							type="submit"
 							class="column button is-primary is-fullwidth"
 						>
-							Register
+							Create
 						</button>
 					</div>
 					<div class="column">
