--- a/src/app/modules/payment/components/create-payment-form/create-payment-form.component.html
+++ b/src/app/modules/payment/components/create-payment-form/create-payment-form.component.html
@@ -137,13 +137,9 @@
 							<div class="field">
 								<label class="label">ExpiredDate</label>
 								<div class="control">
-									<input
-										[value]="test"
-										class="input"
-										formControlName="expirationDate"
-										placeholder="ExpiredDate"
-										type="date"
-									/>
+
+                  <ng2-flatpickr placeholder="Pick a date!" [config]="datePickerOptions"
+                                 formControlName="expirationDate"></ng2-flatpickr>
 								</div>
 								<div
 									*ngIf="
@@ -171,6 +167,7 @@
 						Cancel
 					</button>
 				</footer>
+
 			</form>
 		</div>
 	</div>
