--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
 @import "material-design-icons/iconfont/material-icons.css";
 @import "animate.css/animate.min.css";
 @import '~ngx-toastr/toastr';
+@import "flatpickr/dist/flatpickr.min.css";
 
 
 
